checkout overview component
Build: https://ci.tools.instamotion.com/job/IM-Teams/job/Shared/job/im-components/job/master/266/

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
 @im-ui:registry=https://registry.npmjs.org
 //registry.npmjs.org/:_authToken=${NPM_RO_TOKEN}
+
+@fortawesome:registry=https://npm.fontawesome.com/
+//npm.fontawesome.com/:_authToken=${FONTAWESOME_TOKEN}
+
 scripts-prepend-node-path=true
