--- a/package.json
+++ b/package.json
@@ -32,7 +32,16 @@
   },
   "homepage": "https://github.com/Instamotion/im-components#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-pro": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/pro-light-svg-icons": "^5.13.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.13.0",
+    "@fortawesome/pro-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@n8tb1t/use-scroll-position": "1.0.40",
+    "cross-env": "^7.0.2",
     "downshift": "^3.3.5",
     "react": "^16.11.0",
     "react-alice-carousel": "^1.15.3",
