--- a/packages/checkoutOrderOverview/package.json
+++ b/packages/checkoutOrderOverview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/checkout-order-overview",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -20,9 +20,7 @@
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@im-ui/theme": "^1.0.0",
     "@im-ui/checkbox": "^0.1.10",
@@ -36,7 +34,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9"
   },
   "devDependencies": {
-    "@im-ui/utils": "^0.5.2",
+    "@im-ui/utils": "^0.5.3",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
