--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -19,7 +19,9 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
