[Jenkins]: New release
Build: https://ci.tools.instamotion.com/job/IM-Teams/job/Shared/job/im-components/job/master/284/

--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/checkbox",
-  "version": "0.1.10",
+  "version": "1.0.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -35,9 +33,9 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/error-message": "^0.1.5",
-    "@im-ui/label": "^0.1.8",
-    "@im-ui/theme": "^1.0.0",
+    "@im-ui/error-message": "^0.1.6",
+    "@im-ui/label": "^1.0.0",
+    "@im-ui/theme": "^1.0.1",
     "@im-ui/utils": "^0.5.2"
   }
 }
