--- a/packages/tabs/package.json
+++ b/packages/tabs/package.json
@@ -30,14 +30,13 @@
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
+    "@types/react-tabs": "^2.3.1",
     "jest": "^24.9.0",
     "typescript": "^3.6.4"
   },
   "peerDependencies": {
     "react": "^16.11.0",
     "react-intl": "^3.4.0",
-    "styled-components": "^4.4.1",
-    "@types/react-tabs": "^2.3.1",
-    "react-tabs": "^3.1.0"
+    "styled-components": "^4.4.1"
   }
 }
