--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fortawesome/pro-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@n8tb1t/use-scroll-position": "1.0.40",
+    "@types/sha.js": "^2.4.0",
     "cross-env": "^7.0.2",
     "downshift": "^3.3.5",
     "react": "^16.11.0",
@@ -49,6 +50,7 @@
     "react-swipeable": "^5.4.0",
     "react-tabs": "^3.1.0",
     "semver": "^6.3.0",
+    "sha.js": "^2.4.11",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
