--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -19,7 +19,9 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@im-ui/checkbox": "^1.0.0",
     "@types/jest": "^24.0.21",
@@ -35,6 +37,7 @@
   },
   "dependencies": {
     "@im-ui/error-message": "^0.1.6",
+    "@im-ui/icon": "^0.5.0",
     "@im-ui/label": "^1.0.0",
     "@im-ui/theme": "^1.0.1",
     "@im-ui/utils": "^0.5.2"
