--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-gtm-module": "^2.0.8",
     "react-swipeable": "^5.4.0",
     "react-tabs": "^3.1.0",
+    "rimraf": "^3.0.2",
     "semver": "^6.3.0",
     "sha.js": "^2.4.11",
     "styled-components": "^4.4.1"
