--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -7,7 +7,7 @@
   "author": "InstaMotion Retail GmbH",
   "scripts": {
     "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
-    "clean": "rm -rf ./dist",
+    "clean": "rimraf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
@@ -20,7 +20,9 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
