--- a/packages/styledDropdown/package.json
+++ b/packages/styledDropdown/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@im-ui/styled-dropdown",
   "version": "0.2.0",
-  "types": "dist/cjs/index.d.ts",
-  "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/cjs/index.d.ts",
   "author": "InstaMotion Retail GmbH",
-  "maintainers": [
-    "Dmytro B",
-    "Ivan D",
-    "Oleg P",
-    "Alex S"
-  ],
+  "scripts": {
+    "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
+    "clean": "rimraf ./dist",
+    "compile:esm": "tsc -p build/tsconfig.esm.json",
+    "compile:cjs": "tsc -p build/tsconfig.cjs.json",
+    "prepublishOnly": "bolt build"
+  },
   "repository": "git@github.com:Instamotion/im-components.git",
   "license": "MIT",
   "files": ["dist"],
