--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -37,6 +37,7 @@
     "@im-ui/icon": "^0.5.0",
     "@im-ui/label": "^1.0.0",
     "@im-ui/theme": "^1.0.1",
-    "@im-ui/utils": "^0.5.2"
+    "@im-ui/utils": "^0.5.2",
+    "@im-ui/styled-dropdown": "^0.2.0"
   }
 }
