add tracking util

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -30,7 +30,8 @@
   "peerDependencies": {
     "react": "^16.11.0",
     "styled-components": "^4.4.1",
-    "react-intl": "^3.4.0"
+    "react-intl": "^3.4.0",
+    "react-gtm-module": "^2.0.8"
   },
   "dependencies": {
     "@im-ui/theme": "^1.0.0"
