--- a/packages/Error/package.json
+++ b/packages/Error/package.json
@@ -22,10 +22,10 @@
   },
   "files": ["dist"],
   "dependencies": {
-    "@im-ui/theme": "^1.0.1"
+    "@im-ui/theme": "^1.0.1",
+    "@im-ui/utils": "^0.5.5"
   },
   "devDependencies": {
-    "@im-ui/utils": "^0.5.5",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
