--- a/packages/howItWorks/package.json
+++ b/packages/howItWorks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/how-it-works",
-  "version": "2.0.3",
+  "version": "1.3.0",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -15,15 +15,15 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
-    "clean": "rimraf ./dist",
+    "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
   },
   "files": ["dist"],
   "dependencies": {
-    "@im-ui/theme": "^1.0.1",
-    "@im-ui/icon": "^0.6.0",
+    "@im-ui/theme": "^1.0.0 ",
+    "@im-ui/icon": "^0.5.0",
     "@im-ui/typography": "^0.2.7"
   },
   "devDependencies": {
