--- a/packages/highlights/package.json
+++ b/packages/highlights/package.json
@@ -6,10 +6,7 @@
   "main": "dist/cjs/index.js",
   "author": "InstaMotion Retail GmbH",
   "maintainers": [
-    "Dmytro B",
-    "Ivan D",
-    "Oleg P",
-    "Alex S"
+    "Karlo S"
   ],
   "repository": "git@github.com:Instamotion/im-components.git",
   "license": "MIT",
