--- a/packages/highlights/package.json
+++ b/packages/highlights/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/highlights",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -17,9 +17,7 @@
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@im-ui/theme": "^2.0.4",
     "@im-ui/utils": "^0.5.5",
