--- a/packages/radioButtonGroup/package.json
+++ b/packages/radioButtonGroup/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@im-ui/radio-button": "^0.2.2",
     "@im-ui/theme": "^2.0.0",
-    "@im-ui/utils": "^0.5.6"
+    "@im-ui/utils": "^0.5.6",
+    "@im-ui/icon": "^0.6.8"
   }
 }
