--- a/packages/FinancingTab/package.json
+++ b/packages/FinancingTab/package.json
@@ -32,7 +32,8 @@
     "@im-ui/button-toggle": "^1.0.0",
     "@im-ui/toggle": "^1.0.0",
     "@im-ui/label": "^1.0.0",
-    "@im-ui/radio-button": "^0.2.0"
+    "@im-ui/radio-button": "^0.2.0",
+    "@im-ui/input" : "^2.6.6"
   },
   "devDependencies": {
     "@types/jest": "^24.0.21",
