--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.11.0",
     "react-alice-carousel": "^1.15.3",
     "react-gtm-module": "^2.0.8",
+    "react-modal": "^3.13.1",
     "react-swipeable": "^5.4.0",
     "react-tabs": "^3.1.0",
     "rimraf": "^3.0.2",
