--- a/packages/Modal/package.json
+++ b/packages/Modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/modal",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -17,13 +17,10 @@
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
     "@im-ui/theme": "^2.0.8",
     "@im-ui/utils": "^0.5.6"
-
   },
   "devDependencies": {
     "@types/jest": "^24.0.21",
