--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -19,7 +19,9 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@im-ui/checkbox": "^2.1.1",
     "@types/jest": "^24.0.21",
@@ -35,9 +37,9 @@
   },
   "dependencies": {
     "@im-ui/icon": "^0.6.1",
-    "@im-ui/label": "^1.0.6",
+    "@im-ui/label": "^1.1.0",
+    "@im-ui/styled-dropdown": "^1.2.5",
     "@im-ui/theme": "^2.0.2",
-    "@im-ui/utils": "^0.5.6",
-    "@im-ui/styled-dropdown": "^1.2.5"
+    "@im-ui/utils": "^0.5.6"
   }
 }
