--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/input",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@im-ui/checkbox": "^2.1.1",
     "@types/jest": "^24.0.21",
